tests/baselines/reference/classStaticBlock5(target=es2015).errors.txt
tests/cases/conformance/classes/classStaticBlock/classStaticBlock5.ts(11,9): error TS2332: 'this' cannot be referenced in current location.
tests/cases/conformance/classes/classStaticBlock/classStaticBlock5.ts(12,9): error TS2660: 'super' can only be referenced in members of derived classes or object literal expressions.
tests/cases/conformance/classes/classStaticBlock/classStaticBlock5.ts(13,9): error TS2660: 'super' can only be referenced in members of derived classes or object literal expressions.


==== tests/cases/conformance/classes/classStaticBlock/classStaticBlock5.ts (3 errors) ====
    class B {
        static a = 1;
        static b = 2;
    }
    
    class C extends B {
        static b = 3;
        static c = super.a
    
        static {
            this.b;
            ~~~~
!!! error TS2332: 'this' cannot be referenced in current location.
            super.b;
            ~~~~~
!!! error TS2660: 'super' can only be referenced in members of derived classes or object literal expressions.
            super.a;
            ~~~~~
!!! error TS2660: 'super' can only be referenced in members of derived classes or object literal expressions.
        }
    }
    